--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:padding="20dp">
 
         <ImageView
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:src="@drawable/logo" />
@@ -29,7 +30,7 @@
             android:textStyle="bold"
             android:text="Welcome, we are waiting to work with you."
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="17sp"
             />
 
 
@@ -95,11 +96,12 @@
                 android:textColor="@color/white" />
 
             <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/termsConditions"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textStyle="bold"
                 android:text="Terms &amp; Conditons"
-                android:textColor="@color/white" />
+                android:textColor="@color/colorAccent" />
         </LinearLayout>
 
         <android.support.v7.widget.AppCompatTextView
@@ -109,8 +111,9 @@
             android:layout_marginTop="5dp"
             android:gravity="center"
             android:text="Register"
-            android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
             android:visibility="visible" />
 
 
