--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:focusable="false"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    android:paddingTop="20dp">
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -30,19 +27,11 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Register"
-                    android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
-
 
                 <EditText
                     android:id="@+id/etName"
                     style="@style/mEditText"
+                    android:editable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter  Name"
@@ -50,12 +39,23 @@
                     android:textSize="14sp" />
 
                 <EditText
+                    android:editable="false"
                     android:id="@+id/etEmail"
                     style="@style/mEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter Email"
                     android:inputType="textEmailAddress"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:editable="false"
+                    android:id="@+id/etCarNo"
+                    style="@style/mEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Adhaar card no."
+                    android:inputType="number"
                     android:textSize="14sp" />
 
                 <EditText
@@ -77,14 +77,7 @@
                     android:inputType="text"
                     android:textSize="14sp" />
 
-                    <EditText
-                        style="@style/mEditText"
-                        android:id="@+id/etCarNo"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="Adhaar card no."
-                        android:inputType="number"
-                        android:textSize="14sp" />
+
 
                 <EditText
                     android:id="@+id/etShopAddress"
@@ -146,42 +139,20 @@
                     android:textSize="14sp" />
 
                 <Button
-                    android:id="@+id/creataccount"
+                    android:id="@+id/updateProfile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/btn_back_solid"
-                    android:text="Create Account"
+                    android:background="@drawable/inverse_button"
+                    android:text="Update Profile"
                     android:textColor="@color/white" />
 
-                <LinearLayout
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Have an account? "
-                    android:textColor="@color/white" />
 
-                    <TextView
-                        android:paddingTop="15dp"
-                        android:paddingBottom="15dp"
-                        android:id="@+id/tvSingIn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text=" Login."
-                        android:textColor="@color/colorAccent" />
-                </LinearLayout>
 
             </LinearLayout>
 
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
