--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,16 +2,89 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">
-        <item android:title="Home" android:checked="true"/>
-        <item android:title="Orders" />
-        <item android:title="Credit Limits"
-            android:id="@+id/creditLimit"
-            app:actionViewClass="android.widget.TextView"/>
-        <item android:title="FAQ" />
-        <item android:title="Returns"/>
-        <item android:title="Contact Us"/>
-        <item android:title="Terms &amp; Conditions"/>
-        <item android:id="@+id/signout" android:title="Signout"/>
+
+
+        <item android:title="My Profile">
+            <menu>
+                <item
+                    android:id="@+id/myprofile"
+                    android:checkable="false"
+                    android:icon="@drawable/ic_person_black_24dp"
+                    android:title="My Profile" />
+
+                <item
+                    android:id="@+id/mycart"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_cart"
+                    android:title="My Favorite" />
+
+                <item
+                    android:id="@+id/favorite"
+                    android:checkable="false"
+                    android:icon="@drawable/ic_favorite_border_black_24dp"
+                    android:title="My Orders" />
+                <item
+                    android:id="@+id/orders"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_order"
+                    android:title="My Orders" />
+
+                <item
+                    android:id="@+id/signout"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_logout"
+                    android:title="Signout" />
+            </menu>
+        </item>
+
+        <item android:title="Credit Details">
+            <menu>
+                <item
+                    android:id="@+id/creditLimit"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_credit_card"
+                    android:title="Total Limit"
+                    app:actionViewClass="android.widget.TextView" />
+                <item
+                    android:id="@+id/useLimit"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_credit_card"
+                    android:title="Use Limit"
+                    app:actionViewClass="android.widget.TextView" />
+                <item
+                    android:id="@+id/reamingLimit"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_credit_card"
+                    android:title="Remaining Limit"
+                    app:actionViewClass="android.widget.TextView" />
+            </menu>
+        </item>
+
+        <item android:title="Others">
+            <menu>
+
+                <item
+                    android:id="@+id/faq"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_faq"
+                    android:title="FAQ" />
+                <item
+                    android:icon="@drawable/vc_return"
+                    android:title="Returns" />
+                <item
+                    android:id="@+id/contactus"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_contact"
+                    android:title="Contact Us" />
+
+                <item
+                    android:id="@+id/termsConditions"
+                    android:checkable="false"
+                    android:icon="@drawable/vc_contact"
+                    android:title="Terms &amp; Conditions" />
+
+            </menu>
+        </item>
 
 
     </group>
