--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -105,26 +105,34 @@
                     android:inputType="text"
                     android:textSize="14sp" />
 
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <Spinner
+                    android:id="@+id/spinnerState"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="State"
+                    android:inputType="text"
+                    android:textSize="14sp" />
+                </LinearLayout>
 
-                <EditText
-                    android:id="@+id/etCity"
-                    style="@style/mEditText"
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/border_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                <Spinner
+                    android:id="@+id/spinnerCity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="City"
                     android:inputType="text"
                     android:textSize="14sp" />
 
-
-                <EditText
-                    android:id="@+id/etState"
-                    style="@style/mEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="State"
-                    android:inputType="text"
-                    android:textSize="14sp" />
-
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/etPincode"
