--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
 
 
-        <item android:title="My Profile">
+        <item android:title="My Account">
             <menu>
                 <item
                     android:id="@+id/myprofile"
@@ -16,13 +16,13 @@
                     android:id="@+id/mycart"
                     android:checkable="false"
                     android:icon="@drawable/vc_cart"
-                    android:title="My Favorite" />
+                    android:title="My Cart" />
 
                 <item
                     android:id="@+id/favorite"
                     android:checkable="false"
                     android:icon="@drawable/ic_favorite_border_black_24dp"
-                    android:title="My Orders" />
+                    android:title="My Favorite" />
                 <item
                     android:id="@+id/orders"
                     android:checkable="false"
