--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#f9941c23</color>
     <color name="colorAccent">#E3E36A</color>
 
+    <color name="darkPink">#e91e63</color>
+
     <color name="tabColor">#e6e7e4</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
