--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -9,10 +9,10 @@
         android:title="Search"
         app:showAsAction="always"
         app:actionViewClass="android.widget.SearchView" />
-    <item android:title="filter"
-        android:id="@+id/filter"
+    <item android:title="Notification"
+        android:id="@+id/notification"
         app:showAsAction="always"
-        android:icon="@drawable/filter"/>
+        android:icon="@drawable/ic_notifications_black_24dp"/>
     <item
         android:id="@+id/cart"
         android:actionLayout="@layout/cart_count"
