--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -142,6 +142,7 @@
                 <EditText
                     android:id="@+id/zipcode"
                     style="@style/mEditText"
+                    android:inputType="number"
                     android:hint="Add Pincode"
                     android:text="" />
 
