--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -134,7 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Pincode"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:textSize="14sp" />
 
 
