--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="tabColor">#e6e7e4</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="lightgreen">#32CD32</color>
 </resources>
