--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -26,8 +26,10 @@
                 android:orientation="vertical">
 
                 <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/post_img"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
+                    android:scaleType="centerInside"
                     app:srcCompat="@drawable/shirt" />
 
                 <android.support.v7.widget.AppCompatTextView
@@ -200,7 +202,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/white"
+                android:background="@drawable/border_botton"
                 android:text="Add to cart"
                 android:textColor="@color/black" />
 
