--- a/app/src/main/res/layout/activity_payment_options.xml
+++ b/app/src/main/res/layout/activity_payment_options.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,55 +10,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_above="@id/ll_bottom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v4.widget.ContentLoadingProgressBar
-                android:id="@+id/progressBar"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                style="@style/Base.Widget.AppCompat.ProgressBar"/>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/cartList"
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp" />
-            <LinearLayout
-                android:visibility="gone"
-                android:id="@+id/ll_empty"
-                android:orientation="vertical"
+            android:layout_margin="5dp"
+            android:orientation="vertical">
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-                <android.support.v7.widget.AppCompatImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:srcCompat="@drawable/vc_cart"/>
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:text="Select Payment Option" />
+
+
+            <CheckBox
+                android:id="@+id/payMoney"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Prepaid (Credit/Debit Card,Netbanking,Wallet)" />
+
+            <CheckBox
+                android:id="@+id/paytmWallet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Paytm Wallet" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Available credit Rs. 0.0"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <android.support.v7.widget.AppCompatEditText
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:text="Your cart is empty !"/>
+                    android:layout_weight="1"
+                    android:hint="How much you want to redeem?"
+                    android:textSize="14sp" />
 
                 <Button
-                    android:id="@+id/shopNow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/inverse_button"
-                    android:text="Shop Now"
-                    android:textColor="@color/white" />>
+                    android:text="Redeem"
+                    android:textColor="@color/white" />
             </LinearLayout>
 
-        </FrameLayout>
+
+
+
+        </LinearLayout>
+
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/ll_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,15 +89,14 @@
                 android:textColor="@color/black" />
 
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/checkout"
+                android:id="@+id/confirmPayment"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@drawable/inverse_button"
-                android:text="Checkout"
+                android:text="Confirm Payment"
                 android:textColor="@color/white" />
         </LinearLayout>
 
     </RelativeLayout>
-
 </LinearLayout>
