--- a/app/src/main/res/layout/activity_cart_list.xml
+++ b/app/src/main/res/layout/activity_cart_list.xml
@@ -74,6 +74,8 @@
                 android:gravity="center"
                 android:background="@color/white"
                 android:text="Rs. 1720"
+                android:textStyle="bold"
+                android:textSize="16sp"
                 android:textColor="@color/black" />
 
             <android.support.v7.widget.AppCompatButton
