--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -13,6 +13,7 @@
                     android:title="My Profile" />
 
                 <item
+                    app:actionViewClass="android.widget.TextView"
                     android:id="@+id/mycart"
                     android:checkable="false"
                     android:icon="@drawable/vc_cart"
@@ -21,7 +22,7 @@
                 <item
                     android:id="@+id/favorite"
                     android:checkable="false"
-                    android:icon="@drawable/ic_favorite_border_black_24dp"
+                    android:icon="@drawable/ic_favorite_filled_black_24dp"
                     android:title="My Favorite" />
                 <item
                     android:id="@+id/orders"
